    - Added device access/claim error detection to Exodriver open.
    - Added exceptions to spi, async and i2c methods when send/receive bytes
      are more than the U3, U6 and UE9 supports.
    - Fixed spi methods for U6 and UE9 for Python 3.
    - Updated version to 2.0.0 for PEP compliancy and a more standardized
      semantic than the previous data based versioning.
- 2.0.1
    - Updated stream reads with a longer timeout to prevent partial reads with
      certain stream settings.
- 2.0.2
    - Fixed SyntaxWarnings from Python 3.8.
- 2.0.3
    - Updated Windows WindDLL/CDLL calls to include the dll file extension.
- 2.0.4
    - Fixed the U3 and U6 stream ScanFrequency for 100 to 1000 Hz so it does not
      use low-level settings that cause interupt overloads on the device.
    - General U3 and U6 stream improvements with ScanFrequency and its low-level
      stream clock and scan interval configuration.
- 2.0.5
    - Fixed the spi, i2c and asynch methods to not change the arguments.
- 2.1.0
    - Added sht3x.py example.
    - Some documentation corrections.
    - Updated U12 class to maintain the IO states and directions on Linux/Mac.
    - Added support for .debug as a logging.Logger object.
    - Added Windows UD Easy functions eAIN, eDAC, eDI, eDO, eTCConfig, and
      eTCValues to the LabJackPython module.
    - Updated the Device close method documentation for Windows clarification.
    - U12 bug fixes for the rawAISample, rawAIBurst and rawSHT1X methods.
    - Removed Python 2.6 support.
    - Fixed the setName method for Python 3 compatibility.
    - Fixed some Python 3 related bugs in the getName method.
    - U3 and U6 optimizions for processStreamData and binary to analog
      conversion functions.
- 2.2.0
    - Added an optional loadCalibration parameter to the device open functions.
      The open functions will now call getCalibrationData() by default.
- 2.2.1
    - Fixed issue where ctypes.c_byte was used instead of ctypes.c_ubyte.