@@ -16,9 +16,9 @@ import socket
 import warnings
 
 try:
-  import ConfigParser
-except ImportError: # Python 3
-  import configparser as ConfigParser
+    from ConfigParser import SafeConfigParser as ConfigParser
+except ImportError:  # Python 3
+    from configparser import ConfigParser
 
 from struct import pack, unpack
 
@@ -1828,7 +1828,7 @@ class UE9(Device):
               object. Useful for saving the setup of your UE9.
         """
         # Make a new configuration file
-        parser = ConfigParser.SafeConfigParser()
+        parser = ConfigParser()
         
         # Change optionxform so that options preserve their case.
         parser.optionxform = str
